--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar color="primary">
+        <button ion-button menuToggle icon-only>
+          <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+          Nombre página
+        </ion-title>
+      </ion-navbar>
 </ion-header>
 
 <ion-content padding>
